--- a/tracklist.html
+++ b/tracklist.html
@@ -51,49 +51,82 @@
 				<br/>
 			</div>
 			<div id="tc-infoaudio" role="article">
+
 				<a href="Music\01.mp3">Blurred Lines | Robin Thicke</a><br/>
 				<audio id="player" controls>
 				  <source src="Music\01.mp3" type="audio/mpeg">
 				  <source src="Music\01.ogg" type="audio/ogg">
 				  Your browser doesn't support html5 audio; click the song title to play or Rightclick-Save to download it.
 				</audio>
+                <br/>
+				<video id="videoplayer" controls>
+				  <source src="Video\Blurred Lines.m4v" type="video/mp4">
+                   Your browser does not support the video tag. Find it on YouTube instead.
+				</video>
 				<br/><br/>
+
 				<a href="Music\02.mp3">Locked out of heaven | Bruno Marrs</a><br/>
 				<audio id="player" controls>
 				  <source src="Music\02.mp3" type="audio/mpeg">
 				  <source src="Music\02.ogg" type="audio/ogg">
 				</audio>
+                <br/>
+				<video id="videoplayer" controls>
+				  <source src="Video\Locked Out Of Heaven.m4v" type="video/mp4">
+				</video>
 				<br/><br/>
+
 				<a href="Music\03.mp3">Rolling in the deep | Adele</a><br/>
 				<audio id="player" controls>
 				  <source src="Music\03.mp3" type="audio/mpeg">
 				  <source src="Music\03.ogg" type="audio/ogg">
 				</audio>
+                <br/>
+				<video id="video1" controls>
+				  <source src="Video\Rolling In The Deep.m4v" type="video/mp4">
+				</video>
 				<br/><br/>
+
 				<a href="Music\04.mp3">Hold back the night | Graham Parker</a><br/>
 				<audio id="player" controls>
 				  <source src="Music\04.mp3" type="audio/mpeg">
 				  <source src="Music\04.ogg" type="audio/ogg">
 				</audio>
+                <br/>
+				<video id="video2" controls>
+				  <source src="Video\Hold Back The Night.m4v" type="video/mp4">
+				</video>
 				<br/><br/>
+
 				<a href="Music\05.mp3">Tracks of my tears | Smokey Robinson</a><br/>
 				<audio id="player" controls>
 				  <source src="Music\05.mp3" type="audio/mpeg">
 				  <source src="Music\05.ogg" type="audio/ogg">
 				</audio>
+                <br/>
+				<video id="video3" controls>
+				  <source src="Video\Tracks Of My Tears.m4v" type="video/mp4">
+				</video>
 				<br/><br/>
+
 				<a href="Music\06.mp3">Everlasting love | Love Affair</a><br/>
 				<audio id="player" controls>
 				  <source src="Music\06.mp3" type="audio/mpeg">
 				  <source src="Music\06.ogg" type="audio/ogg">
 				</audio>
+                <br/>
+				<video id="video4" controls>
+				  <source src="Video\Everlasting Love.m4v" type="video/mp4">
+				</video>
 				<br/><br/>
+
 				<a href="Music\07.mp3">Come on Eileen | Dexy's Midnight Runners</a><br/>
 				<audio id="player" controls>
 				  <source src="Music\07.mp3" type="audio/mpeg">
 				  <source src="Music\07.ogg" type="audio/ogg">
 				</audio>
 				<br/><br/>
+
 			</div>
 
 			<div id="tc-infotext1" role="article">
