ogg vid formats

--- a/tracklist.html
+++ b/tracklist.html
@@ -61,6 +61,7 @@
                 <br/>
 				<video id="videoplayer" controls>
 				  <source src="Video\Blurred Lines.m4v" type="video/mp4">
+				  <source src="Video\Blurred Lines.ogv" type="video/ogg">
                    Your browser does not support the video tag. Find it on YouTube instead.
 				</video>
 				<br/><br/>
@@ -73,6 +74,7 @@
                 <br/>
 				<video id="videoplayer" controls>
 				  <source src="Video\Locked Out Of Heaven.m4v" type="video/mp4">
+				  <source src="Video\Locked Out Of Heaven.ogv" type="video/ogg">
 				</video>
 				<br/><br/>
 
@@ -84,6 +86,7 @@
                 <br/>
 				<video id="video1" controls>
 				  <source src="Video\Rolling In The Deep.m4v" type="video/mp4">
+				  <source src="Video\Rolling In The Deep.ogv" type="video/ogg">
 				</video>
 				<br/><br/>
 
@@ -95,6 +98,7 @@
                 <br/>
 				<video id="video2" controls>
 				  <source src="Video\Hold Back The Night.m4v" type="video/mp4">
+				  <source src="Video\Hold Back The Night.ogv" type="video/ogg">
 				</video>
 				<br/><br/>
 
@@ -106,6 +110,7 @@
                 <br/>
 				<video id="video3" controls>
 				  <source src="Video\Tracks Of My Tears.m4v" type="video/mp4">
+				  <source src="Video\Tracks Of My Tears.ogv" type="video/ogg">
 				</video>
 				<br/><br/>
 
@@ -117,6 +122,7 @@
                 <br/>
 				<video id="video4" controls>
 				  <source src="Video\Everlasting Love.m4v" type="video/mp4">
+				  <source src="Video\Everlasting Love.ogv" type="video/ogg">
 				</video>
 				<br/><br/>
 
