--- a/tracklist.html
+++ b/tracklist.html
@@ -33,96 +33,87 @@
 		<header>
 			<p>&nbsp;</p>
 			<p>&nbsp;</p>
-			<!--div id="tc-infotext4" role="article">
-				<h3>Video Gallery</h3>
-
-				<a id="video1" href="#">Video1</a>
-				<a id="nojsvideo1" href="http://www.youtube.com/watch?v=54wezNzaH_k">Viva La Vida, by Coldplay, recorded live at the Swiss Cottage</a>
-				<br />
-				<br />
-
-			</div-->
 			<div class="introsidebar" id="tc-introsidebar">
 				<img src="TheAirwavesLogoSideFill.jpg" alt="The Airwaves">
 			</div>
 			<div id="tc-infoaudio" role="article">
-				Listen to a selection of musical tasters:
+				View a selection of musical tasters:
 				<br/>
 				<br/>
 			</div>
 			<div id="tc-infoaudio" role="article">
 
 				<a href="Music\01.mp3">Blurred Lines | Robin Thicke</a><br/>
-				<audio id="player" controls>
+				<!--audio id="player" controls>
 				  <source src="Music\01.mp3" type="audio/mpeg">
 				  <source src="Music\01.ogg" type="audio/ogg">
 				  Your browser doesn't support html5 audio; click the song title to play or Rightclick-Save to download it.
 				</audio>
-                <br/>
+                <br/-->
 				<video id="videoplayer" controls>
-				  <source src="Video\Blurred Lines.m4v" type="video/mp4">
 				  <source src="Video\Blurred Lines.ogv" type="video/ogg">
+				  <source src="Video\Blurred Lines.mp4" type="video/mp4">
                    Your browser does not support the video tag. Find it on YouTube instead.
 				</video>
 				<br/><br/>
 
 				<a href="Music\02.mp3">Locked out of heaven | Bruno Marrs</a><br/>
-				<audio id="player" controls>
+				<!--audio id="player" controls>
 				  <source src="Music\02.mp3" type="audio/mpeg">
 				  <source src="Music\02.ogg" type="audio/ogg">
 				</audio>
-                <br/>
+                <br/-->
 				<video id="videoplayer" controls>
-				  <source src="Video\Locked Out Of Heaven.m4v" type="video/mp4">
 				  <source src="Video\Locked Out Of Heaven.ogv" type="video/ogg">
+				  <source src="Video\Locked Out Of Heaven.mp4" type="video/mp4">
 				</video>
 				<br/><br/>
 
 				<a href="Music\03.mp3">Rolling in the deep | Adele</a><br/>
-				<audio id="player" controls>
+				<!--audio id="player" controls>
 				  <source src="Music\03.mp3" type="audio/mpeg">
 				  <source src="Music\03.ogg" type="audio/ogg">
 				</audio>
-                <br/>
+                <br/-->
 				<video id="video1" controls>
-				  <source src="Video\Rolling In The Deep.m4v" type="video/mp4">
 				  <source src="Video\Rolling In The Deep.ogv" type="video/ogg">
+				  <source src="Video\Rolling In The Deep.mp4" type="video/mp4">
 				</video>
 				<br/><br/>
 
 				<a href="Music\04.mp3">Hold back the night | Graham Parker</a><br/>
-				<audio id="player" controls>
+				<!--audio id="player" controls>
 				  <source src="Music\04.mp3" type="audio/mpeg">
 				  <source src="Music\04.ogg" type="audio/ogg">
 				</audio>
-                <br/>
+                <br/-->
 				<video id="video2" controls>
-				  <source src="Video\Hold Back The Night.m4v" type="video/mp4">
 				  <source src="Video\Hold Back The Night.ogv" type="video/ogg">
+				  <source src="Video\Hold Back The Night.mp4" type="video/mp4">
 				</video>
 				<br/><br/>
 
 				<a href="Music\05.mp3">Tracks of my tears | Smokey Robinson</a><br/>
-				<audio id="player" controls>
+				<!--audio id="player" controls>
 				  <source src="Music\05.mp3" type="audio/mpeg">
 				  <source src="Music\05.ogg" type="audio/ogg">
 				</audio>
-                <br/>
+                <br/-->
 				<video id="video3" controls>
-				  <source src="Video\Tracks Of My Tears.m4v" type="video/mp4">
 				  <source src="Video\Tracks Of My Tears.ogv" type="video/ogg">
+				  <source src="Video\Tracks Of My Tears.mp4" type="video/mp4">
 				</video>
 				<br/><br/>
 
 				<a href="Music\06.mp3">Everlasting love | Love Affair</a><br/>
-				<audio id="player" controls>
+				<!--audio id="player" controls>
 				  <source src="Music\06.mp3" type="audio/mpeg">
 				  <source src="Music\06.ogg" type="audio/ogg">
 				</audio>
-                <br/>
+                <br/-->
 				<video id="video4" controls>
-				  <source src="Video\Everlasting Love.m4v" type="video/mp4">
 				  <source src="Video\Everlasting Love.ogv" type="video/ogg">
+				  <source src="Video\Everlasting Love.mp4" type="video/mp4">
 				</video>
 				<br/><br/>
 
