--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 	<div class="intrologo" id="tc-intrologo">
 	<center>
-		<img src="TheAirwavesLogo.jpg" alt="The Airwaves">
+		<img src="TheAirwavesTopBanner.jpg" alt="The Airwaves">
 	</center>
 	</div>
 
@@ -77,7 +77,7 @@
 			</tr>
 		</table>
 	</div>
-	
+
    <br />
 
  	<div id="tc-footerblockbreak">
@@ -102,7 +102,9 @@
 		</div>
 	</div>
 
-	
+<a href ="http://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Fpages%2FThe-Airwaves-Wedding-and-Function-Band%2F543248222467545%3Ffref%3Dts&width=200&layout=standard&action=like&show_faces=false&share=true&height=35&appId=228063663971584">
+Like us on Facebook
+</a>
 	
 <script type="text/javascript" src="jquery-2.1.0.js"></script>
 <script type="text/javascript" src="sixistLibrary.js"></script>
