--- a/diary.html
+++ b/diary.html
@@ -18,7 +18,7 @@
 
 	<div class="intrologo" id="tc-intrologo">
 	<center>
-		<img src="TheAirwavesLogo.jpg" alt="The Airwaves">
+		<img src="TheAirwavesTopBanner.jpg" alt="The Airwaves">
 	</center>
 	</div>
 
