--- a/contact.html
+++ b/contact.html
@@ -44,6 +44,11 @@
 				<p>Email : <a href="mailto:steve@sallenent.co.uk" class="links-name">steve@sallenent.co.uk</a></p>
 				<p>Tel : 01733 569589</p>
 				<p>Web : <a href="http://www.sallenent.co.uk" class="links-name">http://www.sallenent.co.uk</a></p>
+				<br/>
+				<p></p>
+				<p>Or contact the band directly.</p>
+				<p>Email : <a href="mailto:mrallen33@hotmail.com" class="links-name">Chris</a> or <a href="mailto:ken@sixist.co.uk" class="links-name">Ken</a></p>
+				<p>Tel : Chris 07568 338043</p>
 			</div>
  		</header>
 	</section>
@@ -73,13 +78,16 @@
 
 	<div id="tc-footerblockouter">
 		<div id="tc-footerblock" role="navigation">
-			<p>Contact: </p>
+			<p>Agent Contact: </p>
 			<a name="contact"></a>
 			<h3>Steve Allen Entertainments</h3>
 			<p>Post : The Coach House | 163 Broadway | Peterborough | PE1 4DH</p>
 			<p>Email : <a href="mailto:steve@sallenent.co.uk">steve@sallenent.co.uk</a></p>
 			<p>Tel : 01733 569589</p>
 			<p>Web : <a href="http://www.sallenent.co.uk">http://www.sallenent.co.uk</a></p>
+			<p>Alternative Contact:</p>
+			<p>Email : <a href="mailto:mrallen33@hotmail.com">Chris</a>, <a href="mailto:ken@sixist.co.uk">Ken</a></p>
+			<p>Tel : Chris: 07568 338043</p>
 		</div>
 		<div class="infofooter" id="tc-infofooter" role="complementary">
 			<footer>
