--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
 			<p>&nbsp;</p>
 			<p>&nbsp;</p>
 			<div class="introsidebar" id="tc-introsidebar">
-				<img src="TheAirwavesLogoSideFill.jpg" alt="The Airwaves">
+				<img src="SideFill1.jpg" alt="The Airwaves">
 			</div>
 			<div id="tc-infotext1" role="article">
 				<p>For more information and booking, please contact Steve Allen Entertainments.</p>
