--- a/diary.html
+++ b/diary.html
@@ -36,7 +36,7 @@
 			<p>&nbsp;</p>
 			<p>&nbsp;</p>
 			<div class="introsidebar" id="tc-introsidebar">
-				<img src="TheAirwavesLogoSideFill.jpg" alt="The Airwaves">
+				<img src="SideFill3.jpg" alt="The Airwaves">
 			</div>
 			<div class="infotext" id="tc-infotext" >
 
