--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			<p>&nbsp;</p>
 			<p>&nbsp;</p>
 			<div class="introsidebar" id="tc-introsidebar">
-				<img src="TheAirwavesLogoSideFill.jpg" alt="The Airwaves">
+				<img src="SideFill1.jpg" alt="The Airwaves">
 			</div>
 			<div class="introtext" id="tc-introtext">
 				<p>
