--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
 				<br/>
 				<p></p>
 				<p>Or contact the band directly.</p>
-				<p>Email : <a href="mailto:mrallen33@hotmail.com" class="links-name">Chris</a> or <a href="mailto:ken@sixist.co.uk" class="links-name">Ken</a></p>
+				<p>Email : <a href="mailto:mrallen33@hotmail.com" class="links-name">Chris (mrallen33@hotmail.com)</a> or <a href="mailto:ken@sixist.co.uk" class="links-name">Ken (ken@sixist.co.uk)</a></p>
 				<p>Tel : Chris 07568 338043</p>
 			</div>
  		</header>
