--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
 			</div>
 			<div class="introtext" id="tc-introtext">
 				<p>
-				Formed in 2013, The Airwaves are rapidly building a big 
-				reputation as a premium function band. 
+				Formed in 2013, The Airwaves have rapidly built a big reputation as a premium function band. 
+				We provide the best mix of dance-floor gems from all eras for weddings, parties and events of all types.
 				</p>
 				<p>
-				Hugely experienced musicians, the band are assembled from top bands 
+				Hugely experienced musicians, the band is assembled from top local bands 
 				such as The Motivators, Citizen Smith, 
 				<a href="http://www.brotherhoodsroundabout.co.uk/" class="links-name">Brotherhood's Roundabout</a> and 
 				<a href="http://www.retrolux.co.uk/" class="links-name">Retrolux</a>. 
@@ -54,9 +54,19 @@
 				<p>
 				Playing all the best party songs from past decades and bringing it 
 				bang up to date with recent chart material, The Airwaves cater
-				for any occasion. We provide a multitude of benefits, including four part harmonies, 
-				a discreet P.A. and lighting system suitable for any venue, consummate 
-				professionalism and an iPOD connection to play background music between sets.
+				for any occasion. 
+				We provide a multitude of benefits, including:
+				<li>consummate professionalism</li>
+				<li>a discreet but powerful quality P.A. and lighting system suitable for any venue</li>
+				<li>an iPOD connection for your own background music or first dance that we'll play for you</li>
+				<li>a selection of background music that we'll play for you; you can use this service as an alternative to booking a separate disco & D.J.</li>
+				<li>we can set up in a small area and only require about an hour to install ourselves. </li>
+				</p>
+				<p>
+				We'll do everything possible to make your special event a success, so anything that you need from a band, just ask
+				and we'll do whatever it takes to achieve this. Learn a special song, no problem; set up at a specific time, let us know when; 
+				play between this time and that time, we'll play when you're ready. 
+				You'll also find us very competitively priced compared to other bands in the area - call to find out!
 				</p>
 			</div>
 		</header>
