--- a/contact.html
+++ b/contact.html
@@ -39,14 +39,15 @@
 				<img src="SideFill1.jpg" alt="The Airwaves">
 			</div>
 			<div id="tc-infotext1" role="article">
-				<p>For more information and booking, please contact Steve Allen Entertainments.</p>
+				<p>All booking enquiries are handed by our agent.</p>
+				<p>Please contact Steve Allen Entertainments.</p>
 				<p>The Coach House<br/>163 Broadway<br/>Peterborough<br/>PE1 4DH</p>
 				<p>Email : <a href="mailto:steve@sallenent.co.uk" class="links-name">steve@sallenent.co.uk</a></p>
 				<p>Tel : 01733 569589</p>
 				<p>Web : <a href="http://www.sallenent.co.uk" class="links-name">http://www.sallenent.co.uk</a></p>
 				<br/>
 				<p></p>
-				<p>Or contact the band directly.</p>
+				<p>If you wish to contact the band about any other aspect of the performance, or you have any questions, then you can talk to us directly.</p>
 				<p>Email : <a href="mailto:mrallen33@hotmail.com" class="links-name">Chris (mrallen33@hotmail.com)</a> or <a href="mailto:ken@sixist.co.uk" class="links-name">Ken (ken@sixist.co.uk)</a></p>
 				<p>Tel : Chris 07568 338043</p>
 			</div>
@@ -104,4 +105,3 @@
 
 </body>
 </html>
-
