--- a/index.html
+++ b/index.html
@@ -56,17 +56,23 @@
 				bang up to date with recent chart material, The Airwaves cater
 				for any occasion. 
 				We provide a multitude of benefits, including:
-				<li>consummate professionalism</li>
-				<li>a discreet but powerful quality P.A. and lighting system suitable for any venue</li>
-				<li>an iPOD connection for your own background music or first dance that we'll play for you</li>
-				<li>a selection of background music that we'll play for you; you can use this service as an alternative to booking a separate disco & D.J.</li>
-				<li>we can set up in a small area and only require about an hour to install ourselves. </li>
+				<li>Consummate professionalism</li>
+				<li>A discreet but powerful quality P.A. and lighting system suitable for any venue</li>
+				<li>An iPOD connection for your own background music or first dance that we'll play for you</li>
+				<li>A selection of background music that we'll play for you; you can use this service as an alternative to booking a separate disco & D.J.</li>
+				<li>We can set up in a small area and only require about an hour to install ourselves.</li>
 				</p>
 				<p>
 				We'll do everything possible to make your special event a success, so anything that you need from a band, just ask
 				and we'll do whatever it takes to achieve this. Learn a special song, no problem; set up at a specific time, let us know when; 
 				play between this time and that time, we'll play when you're ready. 
 				You'll also find us very competitively priced compared to other bands in the area - call to find out!
+				</p>
+				<p>
+				For a minimal charge, we can also provide a pianist accompaniment to your event. Our very own keyboard player will 
+				set up and play piano as background music during the function when required. Not only is it more convenient for you, 
+				it is considerably less expensive than hiring a separate pianist.<br/>
+				Please ask for more details.				
 				</p>
 			</div>
 		</header>
