--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
 				<img src="SideFill1.jpg" alt="The Airwaves">
 			</div>
 			<div id="tc-infotext1" role="article">
-				<p>All booking enquiries are handed by our agent.</p>
+				<p>All booking enquiries are handled by our agent.</p>
 				<p>Please contact Steve Allen Entertainments.</p>
 				<p>The Coach House<br/>163 Broadway<br/>Peterborough<br/>PE1 4DH</p>
 				<p>Email : <a href="mailto:steve@sallenent.co.uk" class="links-name">steve@sallenent.co.uk</a></p>
