Links to youtube

--- a/tracklist.html
+++ b/tracklist.html
@@ -57,7 +57,10 @@
 				  <source src="Video\Blurred Lines.mp4" type="video/mp4">
                    Your browser does not support the video tag. Find it on YouTube instead.
 				</video>
-				<br/><br/>
+				<br/>
+				Can't see the video? Watch <a href="https://www.youtube.com/watch?v=mzFGX0lRiUA"><b>here</b></a> instead.
+				<br/>
+				<br/>
 
 				<a href="Music\02.mp3">Locked out of heaven | Bruno Marrs</a><br/>
 				<!--audio id="player" controls>
@@ -69,7 +72,10 @@
 				  <source src="Video\Locked Out Of Heaven.ogv" type="video/ogg">
 				  <source src="Video\Locked Out Of Heaven.mp4" type="video/mp4">
 				</video>
-				<br/><br/>
+				<br/>
+				Can't see the video? Watch <a href="https://www.youtube.com/watch?v=_6toKaubMyQ"><b>here</b></a> instead.
+				<br/>
+				<br/>
 
 				<a href="Music\03.mp3">Rolling in the deep | Adele</a><br/>
 				<!--audio id="player" controls>
@@ -81,7 +87,10 @@
 				  <source src="Video\Rolling In The Deep.ogv" type="video/ogg">
 				  <source src="Video\Rolling In The Deep.mp4" type="video/mp4">
 				</video>
-				<br/><br/>
+				<br/>
+				Can't see the video? Watch <a href="https://www.youtube.com/watch?v=fTk1LOhYm18"><b>here</b></a> instead.
+				<br/>
+				<br/>
 
 				<a href="Music\04.mp3">Hold back the night | Graham Parker</a><br/>
 				<!--audio id="player" controls>
@@ -93,7 +102,10 @@
 				  <source src="Video\Hold Back The Night.ogv" type="video/ogg">
 				  <source src="Video\Hold Back The Night.mp4" type="video/mp4">
 				</video>
-				<br/><br/>
+				<br/>
+				Can't see the video? Watch <a href="https://www.youtube.com/watch?v=f1yCORLHV6c"><b>here</b></a> instead.
+				<br/>
+				<br/>
 
 				<a href="Music\05.mp3">Tracks of my tears | Smokey Robinson</a><br/>
 				<!--audio id="player" controls>
@@ -105,7 +117,10 @@
 				  <source src="Video\Tracks Of My Tears.ogv" type="video/ogg">
 				  <source src="Video\Tracks Of My Tears.mp4" type="video/mp4">
 				</video>
-				<br/><br/>
+				<br/>
+				Can't see the video? Watch <a href="https://www.youtube.com/watch?v=xvveLa81tq0"><b>here</b></a> instead.
+				<br/>
+				<br/>
 
 				<a href="Music\06.mp3">Everlasting love | Love Affair</a><br/>
 				<!--audio id="player" controls>
@@ -117,7 +132,10 @@
 				  <source src="Video\Everlasting Love.ogv" type="video/ogg">
 				  <source src="Video\Everlasting Love.mp4" type="video/mp4">
 				</video>
-				<br/><br/>
+				<br/>
+				Can't see the video? Watch <a href="https://www.youtube.com/watch?v=N7lDrUE6DOU"><b>here</b></a> instead.
+				<br/>
+				<br/>
 
 				<a href="Music\07.mp3">Come on Eileen | Dexy's Midnight Runners</a><br/>
 				<audio id="player" controls>
