--- a/tracklist.html
+++ b/tracklist.html
@@ -11,6 +11,7 @@
 	<meta name="author" content="Ken Norman">
 	<meta name="description" content="The Airwaves, quality covers band Peterborough Cambridgeshire East Anglia Midlands. Weddings Parties Functions Corporate Events Musicians Covers">
 	<meta name="robots" content="all">
+	<meta http-equiv="pragma" content="no-cache" />
 
 </head>
 
@@ -46,8 +47,6 @@
 			<div id="tc-infoaudio" role="article">
 
 				<a href="Music\01.mp3">Blurred Lines | Robin Thicke</a><br/>
-				Can't see the video? Watch <a href="https://www.youtube.com/watch?v=mzFGX0lRiUA"><b>here</b></a> instead.
-				<br/>
 				<!--audio id="player" controls>
 				  <source src="Music\01.mp3" type="audio/mpeg">
 				  <source src="Music\01.ogg" type="audio/ogg">
@@ -60,11 +59,11 @@
                    Your browser does not support the video tag. Find it on YouTube instead.
 				</video>
 				<br/>
+				Can't see the video? Watch <a href="https://www.youtube.com/watch?v=mzFGX0lRiUA" target="_blank"><b>here</b></a> instead.
+				<br/>
 				<br/>
 
 				<a href="Music\02.mp3">Locked out of heaven | Bruno Marrs</a><br/>
-				Can't see the video? Watch <a href="https://www.youtube.com/watch?v=_6toKaubMyQ"><b>here</b></a> instead.
-				<br/>
 				<!--audio id="player" controls>
 				  <source src="Music\02.mp3" type="audio/mpeg">
 				  <source src="Music\02.ogg" type="audio/ogg">
@@ -75,11 +74,11 @@
 				  <source src="Video\Locked Out Of Heaven.mp4" type="video/mp4">
 				</video>
 				<br/>
+				Can't see the video? Watch <a href="https://www.youtube.com/watch?v=_6toKaubMyQ" target="_blank"><b>here</b></a> instead.
+				<br/>
 				<br/>
 
 				<a href="Music\03.mp3">Rolling in the deep | Adele</a><br/>
-				Can't see the video? Watch <a href="https://www.youtube.com/watch?v=fTk1LOhYm18"><b>here</b></a> instead.
-				<br/>
 				<!--audio id="player" controls>
 				  <source src="Music\03.mp3" type="audio/mpeg">
 				  <source src="Music\03.ogg" type="audio/ogg">
@@ -89,6 +88,8 @@
 				  <source src="Video\Rolling In The Deep.ogv" type="video/ogg">
 				  <source src="Video\Rolling In The Deep.mp4" type="video/mp4">
 				</video>
+				<br/>
+				Can't see the video? Watch <a href="https://www.youtube.com/watch?v=fTk1LOhYm18" target="_blank"><b>here</b></a> instead.
 				<br/>
 				<br/>
 
@@ -103,13 +104,11 @@
 				  <source src="Video\Hold Back The Night.mp4" type="video/mp4">
 				</video>
 				<br/>
-				Can't see the video? Watch <a href="https://www.youtube.com/watch?v=f1yCORLHV6c"><b>here</b></a> instead.
+				Can't see the video? Watch <a href="https://www.youtube.com/watch?v=f1yCORLHV6c" target="_blank"><b>here</b></a> instead.
 				<br/>
 				<br/>
 
 				<a href="Music\05.mp3">Tracks of my tears | Smokey Robinson</a><br/>
-				Can't see the video? Watch <a href="https://www.youtube.com/watch?v=xvveLa81tq0"><b>here</b></a> instead.
-				<br/>
 				<!--audio id="player" controls>
 				  <source src="Music\05.mp3" type="audio/mpeg">
 				  <source src="Music\05.ogg" type="audio/ogg">
@@ -120,11 +119,11 @@
 				  <source src="Video\Tracks Of My Tears.mp4" type="video/mp4">
 				</video>
 				<br/>
+				Can't see the video? Watch <a href="https://www.youtube.com/watch?v=xvveLa81tq0" target="_blank"><b>here</b></a> instead.
+				<br/>
 				<br/>
 
 				<a href="Music\06.mp3">Everlasting love | Love Affair</a><br/>
-				Can't see the video? Watch <a href="https://www.youtube.com/watch?v=N7lDrUE6DOU"><b>here</b></a> instead.
-				<br/>
 				<!--audio id="player" controls>
 				  <source src="Music\06.mp3" type="audio/mpeg">
 				  <source src="Music\06.ogg" type="audio/ogg">
@@ -134,6 +133,8 @@
 				  <source src="Video\Everlasting Love.ogv" type="video/ogg">
 				  <source src="Video\Everlasting Love.mp4" type="video/mp4">
 				</video>
+				<br/>
+				Can't see the video? Watch <a href="https://www.youtube.com/watch?v=N7lDrUE6DOU" target="_blank"><b>here</b></a> instead.
 				<br/>
 				<br/>
 
