New vids, PLI Cert

--- a/tracklist.html
+++ b/tracklist.html
@@ -46,16 +46,11 @@
 			</div>
 			<div id="tc-infoaudio" role="article">
 
-				<a href="Music\01.mp3">Blurred Lines | Robin Thicke</a><br/>
-				<!--audio id="player" controls>
-				  <source src="Music\01.mp3" type="audio/mpeg">
-				  <source src="Music\01.ogg" type="audio/ogg">
-				  Your browser doesn't support html5 audio; click the song title to play or Rightclick-Save to download it.
-				</audio>
-                <br/-->
-				<video id="videoplayer" controls>
-				  <source src="Video\Blurred Lines.ogv" type="video/ogg">
-				  <source src="Video\Blurred Lines.mp4" type="video/mp4">
+				<a href="Music/01.mp3">Blurred Lines | Robin Thicke</a><br/>
+				<video id="video1" controls="controls">
+				  <source src="Video/Blurred Lines.ogv" type="video/ogg">
+				  <source src="Video/Blurred Lines.webm" type="video/webm">
+				  <source src="Video/Blurred Lines.mp4" type="video/mp4">
                    Your browser does not support the video tag. Find it on YouTube instead.
 				</video>
 				<br/>
@@ -63,15 +58,11 @@
 				<br/>
 				<br/>
 
-				<a href="Music\02.mp3">Locked out of heaven | Bruno Marrs</a><br/>
-				<!--audio id="player" controls>
-				  <source src="Music\02.mp3" type="audio/mpeg">
-				  <source src="Music\02.ogg" type="audio/ogg">
-				</audio>
-                <br/-->
-				<video id="videoplayer" controls>
-				  <source src="Video\Locked Out Of Heaven.ogv" type="video/ogg">
-				  <source src="Video\Locked Out Of Heaven.mp4" type="video/mp4">
+				<a href="Music/02.mp3">Locked out of heaven | Bruno Marrs</a><br/>
+				<video id="video2" controls="controls">
+				  <source src="Video/Locked Out Of Heaven.ogv" type="video/ogg">
+				  <source src="Video/Locked Out Of Heaven.webm" type="video/webm">
+				  <source src="Video/Locked Out Of Heaven.mp4" type="video/mp4">
 				</video>
 				<br/>
 				Can't see the video? Watch <a href="https://www.youtube.com/watch?v=_6toKaubMyQ" target="_blank"><b>here</b></a> instead.
@@ -79,13 +70,9 @@
 				<br/>
 
 				<a href="Music\03.mp3">Rolling in the deep | Adele</a><br/>
-				<!--audio id="player" controls>
-				  <source src="Music\03.mp3" type="audio/mpeg">
-				  <source src="Music\03.ogg" type="audio/ogg">
-				</audio>
-                <br/-->
-				<video id="video1" controls>
+				<video id="video3" controls="controls">
 				  <source src="Video\Rolling In The Deep.ogv" type="video/ogg">
+				  <source src="Video\Rolling In The Deep.webm" type="video/webm">
 				  <source src="Video\Rolling In The Deep.mp4" type="video/mp4">
 				</video>
 				<br/>
@@ -93,55 +80,43 @@
 				<br/>
 				<br/>
 
-				<a href="Music\04.mp3">Hold back the night | Graham Parker</a><br/>
-				<!--audio id="player" controls>
-				  <source src="Music\04.mp3" type="audio/mpeg">
-				  <source src="Music\04.ogg" type="audio/ogg">
-				</audio>
-                <br/-->
-				<video id="video2" controls>
-				  <source src="Video\Hold Back The Night.ogv" type="video/ogg">
-				  <source src="Video\Hold Back The Night.mp4" type="video/mp4">
+				<a href="Music/04.mp3">Hold back the night | Graham Parker</a><br/>
+				<video id="video4" controls="controls">
+				  <source src="Video/Hold Back The Night.ogv" type="video/ogg">
+				  <source src="Video/Hold Back The Night.webm" type="video/webm">
+				  <source src="Video/Hold Back The Night.mp4" type="video/mp4">
 				</video>
 				<br/>
 				Can't see the video? Watch <a href="https://www.youtube.com/watch?v=f1yCORLHV6c" target="_blank"><b>here</b></a> instead.
 				<br/>
 				<br/>
 
-				<a href="Music\05.mp3">Tracks of my tears | Smokey Robinson</a><br/>
-				<!--audio id="player" controls>
-				  <source src="Music\05.mp3" type="audio/mpeg">
-				  <source src="Music\05.ogg" type="audio/ogg">
-				</audio>
-                <br/-->
-				<video id="video3" controls>
-				  <source src="Video\Tracks Of My Tears.ogv" type="video/ogg">
-				  <source src="Video\Tracks Of My Tears.mp4" type="video/mp4">
+				<a href="Music/05.mp3">Tracks of my tears | Smokey Robinson</a><br/>
+				<video id="video5" controls="controls">
+				  <source src="Video/Tracks Of My Tears.ogv" type="video/ogg">
+				  <source src="Video/Tracks Of My Tears.webm" type="video/webm">
+				  <source src="Video/Tracks Of My Tears.mp4" type="video/mp4">
 				</video>
 				<br/>
 				Can't see the video? Watch <a href="https://www.youtube.com/watch?v=xvveLa81tq0" target="_blank"><b>here</b></a> instead.
 				<br/>
 				<br/>
 
-				<a href="Music\06.mp3">Everlasting love | Love Affair</a><br/>
-				<!--audio id="player" controls>
-				  <source src="Music\06.mp3" type="audio/mpeg">
-				  <source src="Music\06.ogg" type="audio/ogg">
-				</audio>
-                <br/-->
-				<video id="video4" controls>
-				  <source src="Video\Everlasting Love.ogv" type="video/ogg">
-				  <source src="Video\Everlasting Love.mp4" type="video/mp4">
+				<a href="Music/06.mp3">Everlasting love | Love Affair</a><br/>
+				<video id="video6" controls="controls">
+				  <source src="Video/Everlasting Love.ogv" type="video/ogg">
+				  <source src="Video/Everlasting Love.webm" type="video/webm">
+				  <source src="Video/Everlasting Love.mp4" type="video/mp4">
 				</video>
 				<br/>
 				Can't see the video? Watch <a href="https://www.youtube.com/watch?v=N7lDrUE6DOU" target="_blank"><b>here</b></a> instead.
 				<br/>
 				<br/>
 
-				<a href="Music\07.mp3">Come on Eileen | Dexy's Midnight Runners</a><br/>
-				<audio id="player" controls>
-				  <source src="Music\07.mp3" type="audio/mpeg">
-				  <source src="Music\07.ogg" type="audio/ogg">
+				<a href="Music/07.mp3">Come on Eileen | Dexy's Midnight Runners</a><br/>
+				<audio id="player7" controls="controls">
+				  <source src="Music/07.mp3" type="audio/mpeg">
+				  <source src="Music/07.ogg" type="audio/ogg">
 				</audio>
 				<br/><br/>
 
@@ -194,7 +169,7 @@
 		</div>
 		<div class="infofooter" id="tc-infofooter" role="complementary">
 			<footer>
-				<a href="http://sixist.co.uk" title="Copyright (C) *sixist*, 2014" class="tc-footer-html">Created by *sixist*</a>
+				<a href="http://sixist.co.uk" title="Copyright (C) *sixist*, 2015" class="tc-footer-html">Created by *sixist*</a>
 			</footer>
 		</div>
 	</div>
