--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 				Please ask for more details.				
 				</p>
 				<p>
-				Full Public Liability insurance, for your peace of mind (and ours). Please ask if you need to see our certificate.
+				Our equipment is PAT tested to ensure your safety and we have full Public Liability insurance.
 <a href="http://www.ampband.co.uk/verify.php" target="_blank"><span style="text-decoration:none">
 <img style="border:0px" width="160" height="60" src="http://www.ampband.co.uk/secure/images/plivalidator_grey.gif"
 alt="Check if this Act has current & valid Public Liability Insurance with The Alliance of Musicians & Performers"></span></a>
