--- a/diary.html
+++ b/diary.html
@@ -12,9 +12,20 @@
 	<meta name="description" content="The Airwaves, quality covers band Peterborough Cambridgeshire East Anglia Midlands. Weddings Parties Functions Corporate Events Musicians Covers">
 	<meta name="robots" content="all">
 
+	<script type="text/javascript" src="theairwaves-diary.js"></script>
+    <script src="https://apis.google.com/js/client.js?onload=checkAuth"></script>
+
 </head>
 
 <body class="tc-diary" id="css-tc-body">
+
+    <div id="authorize-div" style="display: none">
+      <span>Authorize access to Google Calendar API</span>
+      <!--Button for the user to click to initiate auth sequence -->
+      <button id="authorize-button" onclick="handleAuthClick(event)">
+        Authorize
+      </button>
+    </div>
 
 	<div class="intrologo" id="tc-intrologo">
 	<center>
@@ -42,8 +53,8 @@
 
 				<div id="tc-infotext1" role="article">
 					<p/>
-					<p id="tc-pagemessage">Javascript needs to be enabled.</p>
-					<p id="tc-allevents"></p>
+					<p id="aw-pagemessage">Working...</p>
+					<p id="aw-allevents"></p>
 				</div>
 			</div>
 		</header>
@@ -84,7 +95,7 @@
 		</div>
 		<div class="infofooter" id="tc-infofooter" role="complementary">
 			<footer>
-				<a href="http://sixist.co.uk" title="Copyright (C) *sixist*, 2014" class="tc-footer-html">Created by *sixist*</a>
+				<a href="http://sixist.co.uk" title="Copyright (C) *sixist*, 2015" class="tc-footer-html">Created by *sixist*</a>
 			</footer>
 		</div>
 	</div>
@@ -93,7 +104,6 @@
 	
 <script type="text/javascript" src="jquery-2.1.0.js"></script>
 <script type="text/javascript" src="sixistLibrary.js"></script>
-<script type="text/javascript" src="theairwaves-diary.js"></script>
 
 </body>
 </html>
