--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
 
 	<div class="intrologo" id="tc-intrologo">
 	<center>
-		<img src="TheAirwavesTopBanner.jpg" alt="The Airwaves">
+		<img src="TheAirwavesTopBanner2.jpg" alt="The Airwaves">
 	</center>
 	</div>
 
@@ -36,7 +36,7 @@
 			<p>&nbsp;</p>
 			<p>&nbsp;</p>
 			<div class="introsidebar" id="tc-introsidebar">
-				<img src="SideFill1.jpg" alt="The Airwaves">
+				<img src="SideFill2a.jpg" alt="The Airwaves">
 			</div>
 			<div id="tc-infotext1" role="article">
 				<p>All booking enquiries are handled by our agent.</p>
@@ -55,7 +55,7 @@
 	</section>
 
 	<div class="introlower" id="tc-introlower">
-		<img src="TheAirwavesLowerBanner.jpg" alt="The Airwaves">
+		<img src="TheAirwavesLowerBanner2.jpg" alt="The Airwaves">
 	</div>
 
 	<div role="article">
