--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 	<div class="intrologo" id="tc-intrologo">
 	<center>
-		<img src="TheAirwavesTopBanner.jpg" alt="The Airwaves">
+		<img src="TheAirwavesTopBanner2.jpg" alt="The Airwaves">
 	</center>
 	</div>
 
@@ -38,7 +38,7 @@
 			<p>&nbsp;</p>
 			<p>&nbsp;</p>
 			<div class="introsidebar" id="tc-introsidebar">
-				<img src="SideFill1.jpg" alt="The Airwaves">
+				<img src="SideFill2a.jpg" alt="The Airwaves">
 			</div>
 			<div class="introtext" id="tc-introtext">
 				<p>
@@ -86,7 +86,7 @@ alt="Check if this Act has current & valid Public Liability Insurance with The A
  
 
 	<div class="introlower" id="tc-introlower">
-		<img src="TheAirwavesLowerBanner.jpg" alt="The Airwaves">
+		<img src="TheAirwavesLowerBanner2.jpg" alt="The Airwaves">
 	</div>
 
 	<div role="article">
