--- a/tracklist.html
+++ b/tracklist.html
@@ -19,7 +19,7 @@
 
 	<div class="intrologo" id="tc-intrologo">
 	<center>
-		<img src="TheAirwavesTopBanner.jpg" alt="The Airwaves">
+		<img src="TheAirwavesTopBanner2.jpg" alt="The Airwaves">
 	</center>
 	</div>
 
@@ -37,7 +37,7 @@
 			<p>&nbsp;</p>
 			<p>&nbsp;</p>
 			<div class="introsidebar" id="tc-introsidebar">
-				<img src="SideFill3.jpg" alt="The Airwaves">
+				<img src="SideFill2b.jpg" alt="The Airwaves">
 			</div>
 			<div id="tc-infoaudio" role="article">
 				View a selection of musical tasters:
@@ -135,7 +135,7 @@
 	</section>
 
 	<div class="introlower" id="tc-introlower">
-		<img src="TheAirwavesLowerBanner.jpg" alt="The Airwaves">
+		<img src="TheAirwavesLowerBanner2.jpg" alt="The Airwaves">
 	</div>
 
 	<div role="article">
