--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			<div class="introtext" id="tc-introtext">
 				<p>
 				Formed in 2013, The Airwaves have rapidly built a big reputation as a premium function band. 
-				We provide the best mix of dance-floor gems from all eras for weddings, parties and events of all types.
+				We provide the best mix of dance-floor gems from all eras for weddings, parties and events of all types. Whatever the function, wherever the party, The Airwaves deliver the perfect professional performance. Music from any era, suited to your requirements, played expertly and always with a smile.
 				</p>
 				<p>
 				Hugely experienced musicians, the band is assembled from top local bands 
